# tau-prime

./: CONTRIBUTING.md  Makefile  README.md  build_backend.py  landing.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  session-temp.jsonl
.github/workflows/: docs.yml  prune-actions-artifacts.yml  publish.yml  release.yml
dev-notes/: release-process.md
dev-notes/architecture/: llm-observability.md  nebius-dynamic-provider.md  phase-20-2-prompt-immediacy.md  startup-update-check.md
docs/: 03-tools.md  compaction.md  configuration.md  custom-prompts.md  index.md  providers.md
docs/adr/: 0002-keep-tool-docs-hand-written.md
docs/architecture/: index.md  phase-15-slash-command-registry.md
src/: pydantic.py
src/tau_agent/: __init__.py  events.py  harness.py  loop.py  messages.py  provider_events.py  types.py
src/tau_ai/: __init__.py  anthropic.py  env.py  events.py  fake.py  (+8 more)
tests/: test_agent_harness.py  test_agent_types.py  test_cli.py  test_coding_session.py  test_coding_tools.py  test_commands.py  test_context_window.py  test_credentials.py  test_diagnostics.py  test_event_protocol.py  test_extensions.py  test_http.py  test_macos_sandbox.py  test_oauth.py  test_paths.py  test_provider_config.py  test_provider_runtime.py  test_remote_compaction.py  test_session.py  test_session_export.py  test_session_manager.py  test_shell_config.py  test_smart_compaction.py  test_system_prompt.py  test_tau_ai.py  test_tui_adapter.py  test_tui_app.py  test_tui_autocomplete.py  test_tui_config.py  test_tui_notifications.py  test_update_check.py
(+65 files in other folders)
