[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "tau-prime"
version = "42.0.1"
description = "A Tau derivative for a-Shell and sandboxed macOS use."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.0",
    "httpx>=0.27",
    "packaging>=24.0",
    "rich>=13.0",
    "textual>=1.0",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/rcarmo/tau-a-shell"
Repository = "https://github.com/rcarmo/tau-a-shell"
Issues = "https://github.com/rcarmo/tau-a-shell/issues"

[project.scripts]
tau = "tau_coding.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]


[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["tau_ai", "tau_agent", "tau_coding"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
